1.3.1 (rXXXX)
-------------

Remove the assumption that all instances of a given class have the same metaclass.

Fixed the method search so that the GantBuilder object referred to by ant is checked for all closures
declared in a target.

Correct Execute.shall method so it works on Windows without Cygwin or MSYS.


1.3.0 (r9298, tagged as 9302)
-----------------------------

Change the way Groovy installs so that it doesn't install into the Groovy installation, but into its own
hierarchy.  There are two distributions:

            1.  Requires a separate Groovy installation.  Currently there are two version:
                a.  Compiled against Groovy 1.5.6
                b.  Compiled against Groovy 1.6-beta-1

            2.  Self-contained, includes all dependent jars.

Various tests amended to work correctly on Windows. Tests previously only checked on Ubuntu, Mac OS X and Solaris.

Created a Gant log.

Created Windows batch files that work.  Posix shell scripts only worked previously.

1.2.0 ( r9173 )
---------------

Introduce the GantBinding class to ensure various things that are needed for Gant to work and to allow more
efficient cloning for multi-threading builds.

Remove the inserting of the class name for target set classes into the binding.

Make the symbols added to the binding by the tools lowercase rather than upper case.  cf. GANT-29.

The Maven target set used to provide access to properties via the symbol Maven, this is changed to
maven.  This change is to make things consistent with the above change of case of tool symbols. All uses of
Maven as a reference from the binding must be replaced by maven.

Add in checks for duplicate symbols in the binding.

Change --cachedir option to short form -C so that -d can be used for --debug.

Updated Maven Ant Tasks to 2.0.9.

Added the ability to specify remote repositories in the Maven Target set.

Move to Java 1.5 for the Gant source: introduce generics and remove casts wherever sensible.
