@@ -1,6 +1,6 @@
 //  Gant -- A Groovy build framework based on scripting Ant tasks.
 //
-//  Copyright © 2007 Russel Winder
+//  Copyright © 2007-8 Russel Winder
 //
 //  Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file except in
 //  compliance with the License. You may obtain a copy of the License at
@@ -14,6 +14,7 @@
 
 package gant.tools
 
+import org.codehaus.gant.GantBinding
 import org.codehaus.gant.GantState
 
 /**
@@ -57,9 +58,9 @@ class LaTeX {
     root : '' ,
     dependents : [ ]
     ]
-  protected final binding
-  protected final executor
-  public LaTeX ( final Binding binding ) {
+  protected final GantBinding binding
+  protected final Execute executor
+  public LaTeX ( final GantBinding binding ) {
     this.binding = binding
     executor = new Execute ( binding ) 
   }
