@@ -8,6 +8,10 @@ declared in a target.
 
 Correct Execute.shall method so it works on Windows without Cygwin or MSYS.
 
+Correct all the tools and target sets so that a GantBinding rather than a Binding is passed.  This is a
+breaking change for anyone who has their own tools or target sets.  Should perhaps be a minor revision
+change rather than a bug fix change but . . . 
+
 
 1.3.0 (r9298, tagged as 9302)
 -----------------------------
